--- a/package.json
+++ b/package.json
@@ -39,15 +39,15 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
-		"@rsbuild/core": "^1.4.3",
+		"@rsbuild/core": "^1.4.6",
 		"@rsbuild/plugin-preact": "^1.5.0",
-		"@rsbuild/plugin-sass": "^1.3.2",
-		"@rsbuild/plugin-svgr": "^1.2.0",
+		"@rsbuild/plugin-sass": "^1.3.3",
+		"@rsbuild/plugin-svgr": "^1.2.1",
 		"@rsbuild/plugin-typed-css-modules": "^1.0.2",
 		"@tauri-apps/cli": "^2.6.2",
 		"@tsconfig/strictest": "^2.0.5",
 		"@types/markdown-it": "^14.1.2",
-		"@types/node": "^24.0.10",
+		"@types/node": "^24.0.13",
 		"@types/sanitize-html": "^2.16.0",
 		"@types/ws": "^8.18.1",
 		"autoprefixer": "^10.4.21",
@@ -60,5 +60,12 @@
 	"browserslist": [
 		"last 4 versions"
 	],
-	"packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
+	"packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39",
+	"pnpm": {
+		"overrides": {
+			"@foxochat/api-types": "latest",
+			"@foxochat/api": "latest",
+			"@foxochat/gateway-types": "latest"
+		}
+	}
 }
