--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"preact": "^10.26.9",
 		"preact-iso": "^2.9.2",
 		"prismjs": "^1.30.0",
+		"react-color-palette": "^7.3.0",
 		"sanitize-html": "^2.17.0",
 		"thumbhash": "^0.1.1",
 		"unicode-emoji-json": "^0.8.0",
